css/theme.css
body {
	padding-top: 60px;
	padding-bottom: 60px;
}

.copyright {
	color: #ffffff;
}

.footer {
	text-align: center;
}

.footer a {
	color: #ee4444;
}

.sidebar {
	position: fixed;
}

.sidebar h1 {
	color: #D14;
	font-size: 1.3em;
}

.sidebar a {
	color: #428bca;
}

.sidebar li {
	margin-top: .7em;
	line-height: 1em;
	list-style-type:lower-roman;
}

.sidebar a:hover {
	color: #3071a9;
}

.container-left {
	width: 940px;
	/* margin: 0px;*/
	position: relative;
	left: 0px;
	top: 0px;
}

.well h1 {
	color: #ee4444;
	font-size: 18px;
}

.well {
	min-height: 0px;
	padding: 0px;
	margin-bottom: 0px;
	background-color: #FFFFFF;
	border: 0px solid #E3E3E3; 
	border-radius: 0px;
	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.05) inset; 
	border-bottom: 1px solid #C0C0C0;
}

.author {
	color: #ee4444;
}

.author a {
	color: #ee4444;
}

.postDate {
	margin: 0px;
	position: relative;
	left: 0px;
	top: 0px;
	font-size: 16px;
}

/* kevin add */
/* 右边最近文章 */
.well_sidebar {
	min-height: 20px;
	/*padding: 19px;*/
	margin-bottom: 20px;
	/*background-color: #F5F5F5;*/
	background-color: #FFF;
	border: 0px solid #E3E3E3; 
	border-radius: 4px;
	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.05) inset;
	margin-left: 30px;
	position: fixed;
	overflow: auto;
}

.well_sidebar h1 {
	color: #D14;
	font-size: 23px;
}

.well_sidebar li {
	margin-top: .7em;
	line-height: 1em;
	list-style-type: disc;

}
/*归档和分类页面*/
.well_list h1 {
	color: #ee4444;
	font-size: 18px;
}

/*归档和分类页面*/
.well_list {
	margin-left: 110px;
	min-height: 0px;
	padding: 0px;
	margin-bottom: 0px;
	background-color: #FFFFFF;
	border: 0px solid #E3E3E3; 
	border-radius: 0px;
	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.05) inset; 
	border-bottom: 1px solid #C0C0C0;
}

.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
	float: right;
}

.navbar-nav {
	position: relative;
	left: 0px;
}

.col-md-9 {
	width: 70%;
}

.col-md-3 {
	width: 30%;
}

/* 标题头的设置 */
.navbar-header {
	float: left;
	/* position: relative;
	left: 285px; */
}

.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
	color: #D14;
	background-color: rgb(255, 255, 255);
}

.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
	color: #D14;
	background-color: transparent;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
	/*border-color: #101010;*/
	border-color: #D14;
	background: rgb(255, 255, 255) none repeat scroll 0% 0%;
}

.navbar-fixed-top {
	top: 0px;
	margin-left: auto;
	margin-right: auto;
	width: 940px;
}

.navbar-nav {
	float: right;
}

/*页码按钮*/
.pagination {
	display: inline-block;
	border-radius: 4px;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
}

/*图片设置不超过最大宽度*/
.post-content img {
	vertical-align: middle;
	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
	max-width: 100%;
}

.index-content img {
	max-width: 650px;
	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
}

.index_title {
	font-size: 16px;
	margin: 7px;
}

/*设置回到顶部的位置*/
#backTop {
	position: fixed;
	right: 100px;
	bottom: 100px;
}
/*隐藏超过一行文字的标题*/
.texthidden {
	/*width:200px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	font-size: 17px;*/
}

.navbar-fixed-top {
	position: absolute;
}

li{
	list-style-type:circle;
}

